# waterbeep-ha

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  info.md  pyproject.toml  requirements-dev.txt  requirements-test.txt
.github/workflows/: release.yml  tests.yml  validate.yml
custom_components/waterbeep/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  hacs.json  manifest.json  sensor.py  statistics.py  strings.json
custom_components/waterbeep/docs/: API.md  ARCHITECTURE.md
custom_components/waterbeep/translations/: pt.json
tests/: __init__.py  conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_sensor.py  test_statistics.py
