[project]
name = "waterbeep"
version = "0.1.0"
description = "Home Assistant integration for the Aquamatrix Waterbeep (EPAL) water telemetry service"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "João Belo", email = ""},
]
keywords = ["homeassistant", "waterbeep", "aquamatrix", "epal", "water", "consumption"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    ".git",
    ".github",
    ".venv",
    "venv",
    "__pycache__",
    "*.pyc",
    ".pytest_cache",
    "build",
    "dist",
]

lint.select = [
    "A",
    "ARG",
    "B",
    "C4",
    "COM",
    "E",
    "F",
    "I",
    "N",
    "PIE",
    "PL",
    "PT",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "T20",
    "UP",
    "W",
]

lint.ignore = [
    "E501",    # line too long (handled by formatter)
    "S101",    # use of assert (required for tests)
    "PLR2004", # magic value comparison
    "PLR0913", # too many arguments
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "COM812",  # trailing comma (conflicts with formatter)
    "S105",    # possible hardcoded password (false positives in tests)
    "S106",    # possible hardcoded password (false positives in tests)
    "ARG001",  # unused function argument (pytest fixtures)
    "ARG002",  # unused method argument (event handlers)
    "N818",    # exception naming (our names are clear)
    "RUF012",  # mutable class attributes (intentional constants)
    "PLC0415", # import not at top-level (lazy imports)
]

[tool.ruff.lint.pycodestyle]
max-line-length = 88

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101", "PLR0913"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
split-on-trailing-comma = false
known-first-party = ["custom_components.waterbeep"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 25
max-returns = 15
max-statements = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "asyncio: mark test as async",
]

[tool.coverage.run]
source = ["custom_components/waterbeep"]
omit = [
    "tests/*",
    "custom_components/waterbeep/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true
precision = 2

[tool.mypy]
python_version = "3.11"
show_error_codes = true
follow_imports = "silent"
ignore_missing_imports = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
